<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddEditActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="10dp"
      >

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/name"
          android:layout_marginTop="15dp"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/nameEdit"
          android:hint="@string/enter_first_name"
          android:inputType="textPersonName"
          android:imeOptions="actionNext"
          android:background="@drawable/list_bg"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/last_name"
          android:layout_marginTop="15dp"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/lastNameEdit"
          android:hint="@string/enter_last_name"
          android:inputType="textPersonName"
          android:imeOptions="actionNext"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/roll_number"
          android:layout_marginTop="15dp"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/rollNumEdit"
          android:hint="@string/enter_roll_number"
          android:inputType="number"
          android:imeOptions="actionDone"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/gender"
          android:layout_marginTop="15dp"
          />
      <RadioGroup
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

          <RadioButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/male"
              android:id="@+id/maleRd"
              />

          <RadioButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/female"
              android:id="@+id/femaleRd"
              android:checked="true"
              />

          <RadioButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/transgender"
              android:id="@+id/transRd"
              />

      </RadioGroup>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/subjects"
          android:layout_marginTop="15dp"
          />

      <CheckBox
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/math"
          android:id="@+id/matchCb"
          />

      <CheckBox
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/physics"
          android:id="@+id/phyCb"
          />

      <CheckBox
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/chemistry"
          android:id="@+id/cheCb"
          />

      <CheckBox
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/english"
          android:id="@+id/engCb"
          />

      <CheckBox
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/tamil"
          android:id="@+id/tamCb"
          />

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/save"
          android:id="@+id/saveBtn"
          android:layout_gravity="center"
          />



  </LinearLayout>



</ScrollView>